Atualização do sistema

--- a/jogosQuimicos/balanceamento.html
+++ b/jogosQuimicos/balanceamento.html
@@ -47,6 +47,18 @@
                             <span class="status-texto" id="status-texto">Trabalhem juntos para balancear a
                                 equação!</span>
                         </div>
+                        <div class="progresso-container">
+                            <div class="nivel-display">
+                                <span class="nivel-label">Nível:</span>
+                                <span class="nivel-texto" id="nivel-texto">Fácil</span>
+                            </div>
+                            <div class="barra-progresso">
+                                <div class="progresso-fill" id="progresso-fill"></div>
+                            </div>
+                            <div class="equacao-counter">
+                                <span id="equacao-counter">Equação 1/2</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
