--- a/jogosQuimicos/memoriaLigacoes.html
+++ b/jogosQuimicos/memoriaLigacoes.html
@@ -62,6 +62,12 @@
                         <div class="status-indicador">
                             <span class="status-texto" id="status-texto">Vez do Jogador 1</span>
                         </div>
+                        <div class="timer-container">
+                            <div class="timer-display">
+                                <span class="timer-icon">⏱️</span>
+                                <span class="timer-text" id="timer-text">05:00</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
