--- a/jogosQuimicos/superTrunfo.html
+++ b/jogosQuimicos/superTrunfo.html
@@ -29,6 +29,68 @@
             </nav>
         </div>
     </header>
+    <!-- Modal de Regras -->
+    <div id="regras-container" class="regras-container-oculto">
+        <div id="regras-popup">
+            <h3 id="regras-titulo">Como Jogar Super Trunfo Químico</h3>
+            <div class="regras-conteudo">
+                <div class="regra-item">
+                    <h4>🎯 Objetivo do Jogo</h4>
+                    <p>Compare propriedades dos elementos químicos e vença rodadas para marcar pontos. Quem fizer mais
+                        pontos ao final vence!</p>
+                </div>
+
+                <div class="regra-item">
+                    <h4>🃏 As Cartas</h4>
+                    <p>Cada carta representa um elemento químico com suas propriedades reais: eletronegatividade, raio
+                        atômico, massa atômica, ponto de fusão, densidade e energia de ionização.</p>
+                </div>
+
+                <div class="regra-item">
+                    <h4>⭐ O Super Trunfo</h4>
+                    <p>O <strong>Flúor</strong> é o Super Trunfo! Ele sempre vence qualquer outro elemento no atributo
+                        <em>eletronegatividade</em>, pois possui o maior valor desse atributo.
+                    </p>
+                </div>
+
+                <div class="regra-item">
+                    <h4>⚖️ Regras de Comparação</h4>
+                    <div class="regras-detalhes">
+                        <p><strong>Maior valor vence:</strong> Eletronegatividade, Massa Atômica, Densidade, Energia de
+                            Ionização</p>
+                        <p><strong>Menor valor vence:</strong> Raio Atômico, Ponto de Fusão</p>
+                        <p><em>Exemplo:</em> No raio atômico, o elemento com menor raio vence a rodada.</p>
+                    </div>
+                </div>
+
+                <div class="regra-item">
+                    <h4>💡 Sistema de Dicas</h4>
+                    <p>Você tem 5 dicas por partida! Cada dica oferece informações estratégicas sobre sua carta atual e
+                        conceitos químicos educativos.</p>
+                </div>
+
+                <div class="regra-item">
+                    <h4>🏆 Vitória</h4>
+                    <p>O jogo termina quando todas as cartas forem usadas. Quem tiver mais pontos vence! Em caso de
+                        empate, é declarada uma partida empatada.</p>
+                </div>
+
+                <div class="regra-exemplo">
+                    <h4>📚 Conceitos que Você Aprende</h4>
+                    <ul>
+                        <li><strong>Eletronegatividade:</strong> Capacidade de atrair elétrons</li>
+                        <li><strong>Raio Atômico:</strong> Tamanho do átomo</li>
+                        <li><strong>Massa Atômica:</strong> Peso médio dos átomos</li>
+                        <li><strong>Ponto de Fusão:</strong> Temperatura para virar líquido</li>
+                        <li><strong>Densidade:</strong> Massa por unidade de volume</li>
+                        <li><strong>Energia de Ionização:</strong> Energia para remover elétrons</li>
+                    </ul>
+                </div>
+            </div>
+            <button id="fechar-regras" class="botao-fechar-regras">Entendi!</button>
+        </div>
+    </div>
+
     <main class="main-jogo">
         <div class="jogo-container">
             <section class="info-jogo-section">
@@ -96,6 +158,7 @@
         </section>
         <section class="acoes-section">
             <button id="botao-reiniciar" class="botao-acao"><span class="botao-texto">Novo Jogo</span></button>
+            <button id="botao-regras" class="botao-acao"><span class="botao-texto">Como Jogar</span></button>
             <button id="botao-historico" class="botao-acao"><span class="botao-texto">Histórico</span></button>
         </section>
     </main>
